--- a/src/assets/scss/block/_special.scss
+++ b/src/assets/scss/block/_special.scss
@@ -1,17 +1,17 @@
 // Creative Commons symbols
 .cc {
   display: inline-block;
-  background: var(--neutral900);
+  background: hsl(var(--neutral900));
   padding: var(--space-1) var(--space0) 0 var(--space-3);
   border: none;
 
   svg {
     height: var(--space0);
     width: var(--space0);
-    fill: var(--primary50);
+    fill: hsl(var(--primary050));
 
     circle {
-      fill: var(--neutral900);
+      fill: hsl(var(--neutral900));
     }
   }
 
@@ -19,10 +19,10 @@
     background: none;
 
     svg {
-      fill: var(--neutral900);
+      fill: hsl(var(--neutral900));
 
       circle {
-        fill: var(--primary50);
+        fill: hsl(var(--primary050));
       }
     }
   }
