--- a/src/assets/scss/utility/_background.scss
+++ b/src/assets/scss/utility/_background.scss
@@ -1,32 +1,32 @@
-.bg-p50  { background: var(--primary50 ); }
-.bg-p100 { background: var(--primary100); }
-.bg-p200 { background: var(--primary200); }
-.bg-p300 { background: var(--primary300); }
-.bg-p400 { background: var(--primary400); }
-.bg-p500 { background: var(--primary500); }
-.bg-p600 { background: var(--primary600); }
-.bg-p700 { background: var(--primary700); }
-.bg-p800 { background: var(--primary800); }
-.bg-p900 { background: var(--primary900); }
+.bg-p50  { background: hsl(var(--primary050)); }
+.bg-p100 { background: hsl(var(--primary100)); }
+.bg-p200 { background: hsl(var(--primary200)); }
+.bg-p300 { background: hsl(var(--primary300)); }
+.bg-p400 { background: hsl(var(--primary400)); }
+.bg-p500 { background: hsl(var(--primary500)); }
+.bg-p600 { background: hsl(var(--primary600)); }
+.bg-p700 { background: hsl(var(--primary700)); }
+.bg-p800 { background: hsl(var(--primary800)); }
+.bg-p900 { background: hsl(var(--primary900)); }
 
-.bg-n50  { background: var(--neutral50 ); }
-.bg-n100 { background: var(--neutral100); }
-.bg-n200 { background: var(--neutral200); }
-.bg-n300 { background: var(--neutral300); }
-.bg-n400 { background: var(--neutral400); }
-.bg-n500 { background: var(--neutral500); }
-.bg-n600 { background: var(--neutral600); }
-.bg-n700 { background: var(--neutral700); }
-.bg-n800 { background: var(--neutral800); }
-.bg-n900 { background: var(--neutral900); }
+.bg-n50  { background: hsl(var(--neutral050)); }
+.bg-n100 { background: hsl(var(--neutral100)); }
+.bg-n200 { background: hsl(var(--neutral200)); }
+.bg-n300 { background: hsl(var(--neutral300)); }
+.bg-n400 { background: hsl(var(--neutral400)); }
+.bg-n500 { background: hsl(var(--neutral500)); }
+.bg-n600 { background: hsl(var(--neutral600)); }
+.bg-n700 { background: hsl(var(--neutral700)); }
+.bg-n800 { background: hsl(var(--neutral800)); }
+.bg-n900 { background: hsl(var(--neutral900)); }
 
-.bg-a50  { background: var(--accent50 ); }
-.bg-a100 { background: var(--accent100); }
-.bg-a200 { background: var(--accent200); }
-.bg-a300 { background: var(--accent300); }
-.bg-a400 { background: var(--accent400); }
-.bg-a500 { background: var(--accent500); }
-.bg-a600 { background: var(--accent600); }
-.bg-a700 { background: var(--accent700); }
-.bg-a800 { background: var(--accent800); }
-.bg-a900 { background: var(--accent900); }
+.bg-a50  { background: hsl(var(--accent050)); }
+.bg-a100 { background: hsl(var(--accent100)); }
+.bg-a200 { background: hsl(var(--accent200)); }
+.bg-a300 { background: hsl(var(--accent300)); }
+.bg-a400 { background: hsl(var(--accent400)); }
+.bg-a500 { background: hsl(var(--accent500)); }
+.bg-a600 { background: hsl(var(--accent600)); }
+.bg-a700 { background: hsl(var(--accent700)); }
+.bg-a800 { background: hsl(var(--accent800)); }
+.bg-a900 { background: hsl(var(--accent900)); }
